[package]
name = "arch-repro-status"
version = "1.3.5"
description = "Check the reproducibility status of your Arch Linux packages"
authors = ["Orhun Parmaksız <orhun@archlinux.org>"]
edition = "2021"
readme = "README.md"
license = "MIT"
documentation = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
homepage = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
repository = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
keywords = ["archlinux", "reproducibility", "build"]
categories = ["command-line-utilities"]
publish = false
default-run = "arch-repro-status"

[[bin]]
name = "arch-repro-status-completions"
path = "src/bin/completions.rs"

[features]
dumb_terminal = ["colored/no-color"]

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
futures = { version = "0.3.27", features = ["executor"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
anyhow = "1.0.70"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rebuilderd-common = "0.19.0"
colored = "2.0.0"
dialoguer = "0.10.3"
ctrlc = { version = "3.2.5", features = ["termination"] }
console = "0.15.5"
dirs-next = "2.0.0"
bytesize = "1.2.0"
alpm = "2.2.1"
chrono = "0.4.24"
clap_complete = "4.1.5"
vecrem = "0.1"

[dependencies.clap]
version = "4.1.11"
features = ["derive", "env", "wrap_help"]

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
